--- a/Index.html
+++ b/Index.html
@@ -43,40 +43,88 @@
                     <a class="menu-item active">
                         <span><i class="fa-solid fa-house"></i></span><h3>Home</h3>
                     </a>
-                    <a>
+                    <a class="menu-item">
+                        <span><i class="fa-solid fa-compass"></i></span><h3>Explore</h3>
+                    </a>
+                    <a class="menu-item" id="notifications" >
                         <span><i class="fa-solid fa-bell"></i></span><h3>Notifications</h3>
                         <!-- Notification pop-up-->
                         <div class="notifications-popup">
-                            <div class="profile-photo">
-                                <img src="Assets/Images/Child1.jpeg">
+                            <div>
+                                <div class="profile-photo">
+                                    <img src="Assets/Images/child3.jpeg">
+                                </div>
+                                <div class="notification-body">
+                                    <b>Keke Palmer</b> accepted your friend request
+                                    <small class="text-muted">2 DAYS AGO</small>
+                                </div>
                             </div>
-                            <div class="notification-body">
-                                <b>Keke Palmer</b> accepted your friend request
-                                <small class="text-muted">2 DAYS AGO</small>
+                            <div>
+                                <div class="profile-photo">
+                                    <img src="Assets/Images/child2.jpeg">
+                                </div>
+                                <div class="notification-body">
+                                    <b>John Cena</b> commented on your post 
+                                    <small class="text-muted">1 HOUR AGO</small>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="profile-photo">
+                                    <img src="Assets/Images/child5.jpeg">
+                                </div>
+                                <div class="notification-body">
+                                    <b>Donald Trump</b> commented on your post
+                                    <small class="text-muted">1 HOUR AGO</small>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="profile-photo">
+                                    <img src="Assets/Images/child4.jpeg">
+                                </div>
+                                <div class="notification-body">
+                                    <b>Diana Bee</b> and 238 others liked your post 
+                                    <small class="text-muted">1 HOUR AGO</small>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="profile-photo">
+                                    <img src="Assets/Images/child7.jpeg">
+                                </div>
+                                <div class="notification-body">
+                                    <b>John Doe</b> commented on a post you are tagged in 
+                                    <small class="text-muted">1 HOUR AGO</small> 
+                                </div>
                             </div>
                         </div>
                     </a>
-                    <a>
+                    <!-- End of Notification Group -->
+                    <a class="menu-item" >
                         <span><i class="fa-solid fa-envelope"></i></span><h3>Messages</h3>
                     </a>
-                    <a>
+                    <a class="menu-item" >
                         <span><i class="fa-solid fa-bookmark"></i></span><h3>Bookmarks</h3>
                     </a>
-                    <a>
+                    <a class="menu-item" >
                         <span><i class="fa-solid fa-chart-simple"></i></span><h3>Analytics</h3>
                     </a>
-                    <a>
+                    <a class="menu-item" >
                         <span><i class="fa-solid fa-palette"></i></span><h3>Theme</h3>
                     </a>
-                    <a>
+                    <a class="menu-item">
                         <span><i class="fa-solid fa-gear"></i></span><h3>Settings</h3>
                     </a>
                 </div>
+                <!-- End of Sidebar -->
+                <label for="create-post" class="btn btn-primary" >Create Post</label>
             </div>
             <!--middle grid-->
-            <div class="middle"></div>
+            <div class="middle">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione nobis architecto saepe consectetur accusamus placeat est, quia nulla non fuga vel obcaecati tempora sint repellendus, possimus, eos dignissimos hic. Nesciunt quas veritatis mollitia quae ipsam reiciendis fugit quo vero tempore. Illum enim inventore debitis cupiditate numquam nulla nesciunt esse vitae?
+            </div>
             <!--right side grid-->
-            <div class="right"></div>
+            <div class="right">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ipsum totam error at aliquam laborum est et animi iure cumque explicabo, sequi quo, possimus numquam dicta. Fugiat, dolor officia iusto a modi deserunt, vitae officiis sapiente quod aperiam rerum, quaerat rem sunt saepe tempora provident quam ut quisquam iste ipsam.
+            </div>
         </div>
     </main>
     <script src="Assets/script.js"></script>
