html instructions for adding images

--- a/Index.html
+++ b/Index.html
@@ -140,25 +140,25 @@
                     </div>
                     <div class="story">
                         <div class="profile-photo">
-                            <img src="./images/profile-10.jpg">
+                            <img src="Assets/Images/child9.jpeg">
                         </div>
                         <p class="name">Winnie Hale</p>
                     </div>
                     <div class="story">
                         <div class="profile-photo">
-                            <img src="./images/profile-11.jpg">
+                            <img src="Assets/Images/child10.jpeg">
                         </div>
                         <p class="name">Daniel Bale</p>
                     </div>
                     <div class="story">
                         <div class="profile-photo">
-                            <img src="./images/profile-12.jpg">
+                            <img src="Assets/Images/child6.jpeg">
                         </div>
                         <p class="name">Jane Doe</p>
                     </div>
                     <div class="story">
                         <div class="profile-photo">
-                            <img src="./images/profile-8.jpg">
+                            <img src="Assets/Images/child17.jpg">
                         </div>
                         <p class="name">Tina White</p>
                     </div>
@@ -166,7 +166,7 @@
                 <!-- End of stories-->
                 <form class="create-post">
                     <div class="profile-photo">
-                        <img src="./images/profile-1.jpg">
+                        <img src="Assets/Images/Child1.jpeg">
                     </div>
                     <input type="text" placeholder="What's on your mind, Diana?" id="create-post">
                     <input type="submit" value="Post" class="btn btn-primary">
@@ -178,11 +178,11 @@
                         <div class="head">
                             <div class="user">
                                 <div class="profile-photo">
-                                    <img src="./images/profile-13.jpg">
+                                    <img src="Assets/Images/child12.jpeg">
                                 </div>
                                 <div class="ingo">
                                     <h3>Lana Rose</h3>
-                                    <small>Dubai, 15 MINUTES AGO</small>
+                                    <small>Brampton, 15 MINUTES AGO</small>
                                 </div>
                             </div>
                             <span class="edit">
@@ -191,7 +191,7 @@
                         </div>
 
                         <div class="photo">
-                            <img src="./images/feed-1.jpg">
+                            <img src="Assets/Images/child12.jpeg">
                         </div>
 
                         <div class="action-buttons">
@@ -206,12 +206,12 @@
                         </div>
 
                         <div class="liked-by">
-                            <span><img src="./images/profile-10.jpg"></span>
-                            <span><img src="./images/profile-4.jpg"></span>
-                            <span><img src="./images/profile-15.jpg"></span>
+                            <span><img src="Assets/Images/child10.jpeg"></span>
+                            <span><img src="Assets/Images/child16.jpeg"></span>
+                            <span><img src="Assets/Images/child13.jpeg"></span>
                             <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
                         </div>
-
+<!---- continue uploading picturs from here-->
                         <div class="caption">
                             <p><b>Lana Rose</b> Lorem ipsum dolor sit quisquam eius. <span class="harsh-tag">#lifestyle</span></p>
                         </div>
