--- a/Index.html
+++ b/Index.html
@@ -223,11 +223,11 @@
                         <div class="head">
                             <div class="user">
                                 <div class="profile-photo">
-                                    <img src="./images/profile-14.jpg">
+                                    <img src="Assets/Images/child11.jpeg">
                                 </div>
                                 <div class="ingo">
                                     <h3>Benjamin Dwayne</h3>
-                                    <small>Miami, 2 HOURS AGO</small>
+                                    <small>Nairobi, 2 HOURS AGO</small>
                                 </div>
                             </div>
                             <span class="edit">
@@ -236,7 +236,7 @@
                         </div>
 
                         <div class="photo">
-                            <img src="./images/feed-2.jpg">
+                            <img src="Assets/Images/kids project1.jpeg">
                         </div>
 
                         <div class="action-buttons">
@@ -251,9 +251,9 @@
                         </div>
 
                         <div class="liked-by">
-                            <span><img src="./images/profile-10.jpg"></span>
-                            <span><img src="./images/profile-4.jpg"></span>
-                            <span><img src="./images/profile-15.jpg"></span>
+                            <span><img src="Assets/Images/child21.jpeg"></span>
+                            <span><img src="Assets/Images/child10.jpeg"></span>
+                            <span><img src="Assets/Images/child23.jpeg"></span>
                             <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
                         </div>
 
@@ -268,7 +268,7 @@
                         <div class="head">
                             <div class="user">
                                 <div class="profile-photo">
-                                    <img src="./images/profile-15.jpg">
+                                    <img src="Assets/Images/child22.jpeg">
                                 </div>
                                 <div class="ingo">
                                     <h3>Malik Berry</h3>
@@ -281,7 +281,7 @@
                         </div>
 
                         <div class="photo">
-                            <img src="./images/feed-3.jpg">
+                            <img src="Assets/Images/child22.jpeg">
                         </div>
 
                         <div class="action-buttons">
@@ -296,9 +296,9 @@
                         </div>
 
                         <div class="liked-by">
-                            <span><img src="./images/profile-10.jpg"></span>
-                            <span><img src="./images/profile-4.jpg"></span>
-                            <span><img src="./images/profile-15.jpg"></span>
+                            <span><img src="Assets/Images/child15.jpeg"></span>
+                            <span><img src="Assets/Images/child13.jpeg"></span>
+                            <span><img src="Assets/Images/child11.jpeg"></span>
                             <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
                         </div>
 
@@ -313,11 +313,11 @@
                         <div class="head">
                             <div class="user">
                                 <div class="profile-photo">
-                                    <img src="./images/profile-16.jpg">
+                                    <img src="Assets/Images/child16.jpeg">
                                 </div>
                                 <div class="ingo">
                                     <h3>Lana Rose</h3>
-                                    <small>Dubai, 15 MINUTES AGO</small>
+                                    <small>Toronto, 15 MINUTES AGO</small>
                                 </div>
                             </div>
                             <span class="edit">
@@ -326,7 +326,7 @@
                         </div>
 
                         <div class="photo">
-                            <img src="./images/feed-4.jpg">
+                            <img src="Assets/Images/child16.jpeg">
                         </div>
 
                         <div class="action-buttons">
@@ -341,9 +341,9 @@
                         </div>
 
                         <div class="liked-by">
-                            <span><img src="./images/profile-10.jpg"></span>
-                            <span><img src="./images/profile-4.jpg"></span>
-                            <span><img src="./images/profile-15.jpg"></span>
+                            <span><img src="Assets/Images/child10.jpeg"></span>
+                            <span><img src="Assets/Images/child15.jpeg"></span>
+                            <span><img src="Assets/Images/child13.jpeg"></span>
                             <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
                         </div>
 
@@ -358,7 +358,7 @@
                         <div class="head">
                             <div class="user">
                                 <div class="profile-photo">
-                                    <img src="./images/profile-16.jpg">
+                                    <img src="Assets/Images/child8.jpeg">
                                 </div>
                                 <div class="ingo">
                                     <h3>Chris Brown</h3>
@@ -371,7 +371,7 @@
                         </div>
 
                         <div class="photo">
-                            <img src="./images/feed-5.jpg">
+                            <img src="Assets/Images/child8.jpeg">
                         </div>
 
                         <div class="action-buttons">
@@ -386,9 +386,9 @@
                         </div>
 
                         <div class="liked-by">
-                            <span><img src="./images/profile-10.jpg"></span>
-                            <span><img src="./images/profile-4.jpg"></span>
-                            <span><img src="./images/profile-15.jpg"></span>
+                            <span><img src="Assets/Images/child7.jpeg"></span>
+                            <span><img src="Assets/Images/child15.jpeg"></span>
+                            <span><img src="Assets/Images/child14.jpeg"></span>
                             <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
                         </div>
 
