a new feature branch

--- a/Index.html
+++ b/Index.html
@@ -403,7 +403,7 @@
                         <div class="head">
                             <div class="user">
                                 <div class="profile-photo">
-                                    <img src="./images/profile-17.jpg">
+                                    <img src="Assets/Images/child13.jpeg">
                                 </div>
                                 <div class="ingo">
                                     <h3>Michael David</h3>
@@ -416,7 +416,7 @@
                         </div>
 
                         <div class="photo">
-                            <img src="./images/feed-6.jpg">
+                            <img src="Assets/Images/child13.jpeg">
                         </div>
 
                         <div class="action-buttons">
@@ -431,9 +431,9 @@
                         </div>
 
                         <div class="liked-by">
-                            <span><img src="./images/profile-10.jpg"></span>
-                            <span><img src="./images/profile-4.jpg"></span>
-                            <span><img src="./images/profile-15.jpg"></span>
+                            <span><img src="Assets/Images/child19.jpeg"></span>
+                            <span><img src="Assets/Images/child14.jpeg"></span>
+                            <span><img src="Assets/Images/child20.jpeg"></span>
                             <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
                         </div>
 
@@ -448,7 +448,7 @@
                         <div class="head">
                             <div class="user">
                                 <div class="profile-photo">
-                                    <img src="./images/profile-18.jpg">
+                                    <img src="Assets/Images/child24.jpeg">
                                 </div>
                                 <div class="ingo">
                                     <h3>Ama Jackie</h3>
@@ -461,7 +461,7 @@
                         </div>
 
                         <div class="photo">
-                            <img src="./images/feed-7.jpg">
+                            <img src="Assets/Images/kids project6.jpeg">
                         </div>
 
                         <div class="action-buttons">
@@ -476,9 +476,9 @@
                         </div>
 
                         <div class="liked-by">
-                            <span><img src="./images/profile-10.jpg"></span>
-                            <span><img src="./images/profile-4.jpg"></span>
-                            <span><img src="./images/profile-15.jpg"></span>
+                            <span><img src="Assets/Images/kids project9.jpeg"></span>
+                            <span><img src="Assets/Images/child18.jpeg"></span>
+                            <span><img src="Assets/Images/child12.jpeg"></span>
                             <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
                         </div>
 
@@ -514,7 +514,7 @@
                     <!-- MESSAGE -->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="./images/profile-2.jpg">
+                            <img src="Assets/Images/kids project4.jpeg">
                         </div>
                         <div class="message-body">
                             <h5>Edem Quist</h5>
@@ -524,7 +524,7 @@
                     <!-- MESSAGE -->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="./images/profile-3.jpg">
+                            <img src="Assets/Images/child19.jpeg">
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
@@ -535,7 +535,7 @@
                     <!-- MESSAGE -->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="./images/profile-4.jpg">
+                            <img src="Assets/Images/kids project7.jpeg">
                         </div>
                         <div class="message-body">
                             <h5>Jane Doe</h5>
@@ -545,7 +545,7 @@
                     <!-- MESSAGE -->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="./images/profile-5.jpg">
+                            <img src="Assets/Images/child20.jpeg">
                         </div>
                         <div class="message-body">
                             <h5>Daniella Jackson</h5>
@@ -555,7 +555,7 @@
                     <!-- MESSAGE -->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="./images/profile-6.jpg">
+                            <img src="Assets/Images/child21.jpeg">
                         </div>
                         <div class="message-body">
                             <h5>Juliet Makarey</h5>
@@ -565,7 +565,7 @@
                     <!-- MESSAGE -->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="./images/profile-7.jpg">
+                            <img src="Assets/Images/kids project1.jpeg">
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
@@ -584,7 +584,7 @@
                     <div class="request">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./images/profile-8.jpg">
+                                <img src="Assets/Images/child7.jpeg">
                             </div>
                             <div>
                                 <h5>Hajia Bintu</h5>
@@ -600,7 +600,7 @@
                     <div class="request">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./images/profile-9.jpg">
+                                <img src="Assets/Images/kids project5.jpeg">
                             </div>
                             <div>
                                 <h5>Jackline Mensah</h5>
@@ -616,7 +616,7 @@
                     <div class="request">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./images/profile-10.jpg">
+                                <img src="Assets/Images/kids project10.jpeg">
                             </div>
                             <div>
                                 <h5>Jennifer Lawrence</h5>
